Resolved text-overflow

--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,8 @@ footer{
 	display: inline-block;
 	vertical-align: top;
 }
- 
+.wrap-text{
+overflow-wrap:anywhere;} 
 /* Footer left */
  
 .footer-distributed .footer-left{
